--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-rollup": "^0.7.1",
     "http-server": "^0.9.0",
-    "rollup-plugin-babel": "^2.4.0"
+    "rollup-plugin-babel": "^2.4.0",
+    "rollup-plugin-node-resolve": "^1.5.0"
   }
 }
