--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "",
-    "start": "concurrently 'node ./node_modules/http-server/bin/http-server' 'grunt' 'grunt watch'"
+    "start": "concurrently 'node ./node_modules/http-server/bin/http-server' 'grunt' 'grunt watch --force'"
   },
   "author": "",
   "license": "ISC",
